--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,8 @@ description: 'Build a Debian package, using the latest version of Debian Buster'
 outputs:
   filename:
     description: 'Name of the built `.deb` file'
+  filename-dbgsym:
+    description: 'Name of the built `.deb` file for debug symbols'
 
 runs:
   using: docker
